--- a/app/src/index.css
+++ b/app/src/index.css
@@ -13,16 +13,36 @@
   font-style: normal;
 }
 
+.open-sans-light {
+  font-family: "Open Sans", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: 500;
+  font-style: normal;
+  font-variation-settings:
+    "wdth" 100;
+  text-shadow: 0.5px 0.5px 2px rgba(0, 0, 0, 0.4);
+}
+
 .bebas-neue-regular {
   font-family: "Bebas Neue", sans-serif;
   font-weight: 400;
   font-style: normal;
+  text-shadow: 0.5px 0.5px 2px rgba(0, 0, 0, 0.4);
 }
 
 .bebas-neue-bold {
   font-family: "Bebas Neue", sans-serif;
   font-weight: 700;
   font-style: normal;
+}
+
+.open-sans-regular {
+  font-family: "Open Sans", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: 500;
+  font-style: normal;
+  font-variation-settings:
+    "wdth" 100;
 }
 
 @keyframes updown {
