--- a/app/src/index.css
+++ b/app/src/index.css
@@ -6,6 +6,13 @@
   font-style: normal;
 }
 
+.oswald-light {
+  font-family: "Oswald", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: 300;
+  font-style: normal;
+}
+
 .oswald-regular {
   font-family: "Oswald", sans-serif;
   font-optical-sizing: auto;
