--- a/app/src/index.css
+++ b/app/src/index.css
@@ -52,6 +52,14 @@
     "wdth" 100;
 }
 
+.playfair-display-regular {
+  font-family: "Playfair Display", serif;
+  font-optical-sizing: auto;
+  font-weight: 500;
+  font-style: normal;
+}
+
+
 @keyframes updown {
   0%, 20% { transform: translateY(0); } 
   50% { transform: translateY(-15px); }
