--- a/app/src/index.css
+++ b/app/src/index.css
@@ -1,67 +1,49 @@
 @import "tailwindcss";
 
-.bbh-sans-bogle-regular {
-  font-family: "BBH Sans Bogle", sans-serif;
-  font-weight: 400;
-  font-style: normal;
-}
-
-.oswald-light {
-  font-family: "Oswald", sans-serif;
-  font-optical-sizing: auto;
-  font-weight: 300;
-  font-style: normal;
-}
-
-.oswald-regular {
-  font-family: "Oswald", sans-serif;
-  font-optical-sizing: auto;
-  font-weight: 400;
-  font-style: normal;
-}
-
-.open-sans-light {
-  font-family: "Open Sans", sans-serif;
-  font-optical-sizing: auto;
-  font-weight: 500;
-  font-style: normal;
-  font-variation-settings:
-    "wdth" 100;
-  text-shadow: 0.5px 0.5px 2px rgba(0, 0, 0, 0.4);
+@keyframes updown {
+  0%, 20% { transform: translateY(0); } 
+  50% { transform: translateY(-15px); }
+  80%, 100% { transform: translateY(0); }
 }
 
 .bebas-neue-regular {
   font-family: "Bebas Neue", sans-serif;
   font-weight: 400;
   font-style: normal;
-
 }
 
-.bebas-neue-bold {
-  font-family: "Bebas Neue", sans-serif;
+.comic-neue-light {
+  font-family: "Comic Neue", cursive;
+  font-weight: 300;
+  font-style: normal;
+}
+
+.comic-neue-regular {
+  font-family: "Comic Neue", cursive;
+  font-weight: 400;
+  font-style: normal;
+}
+
+.comic-neue-bold {
+  font-family: "Comic Neue", cursive;
   font-weight: 700;
   font-style: normal;
 }
 
-.open-sans-regular {
-  font-family: "Open Sans", sans-serif;
-  font-optical-sizing: auto;
-  font-weight: 500;
-  font-style: normal;
-  font-variation-settings:
-    "wdth" 100;
+.comic-neue-light-italic {
+  font-family: "Comic Neue", cursive;
+  font-weight: 300;
+  font-style: italic;
 }
 
-.playfair-display-regular {
-  font-family: "Playfair Display", serif;
-  font-optical-sizing: auto;
-  font-weight: 500;
-  font-style: normal;
+.comic-neue-regular-italic {
+  font-family: "Comic Neue", cursive;
+  font-weight: 400;
+  font-style: italic;
 }
 
-
-@keyframes updown {
-  0%, 20% { transform: translateY(0); } 
-  50% { transform: translateY(-15px); }
-  80%, 100% { transform: translateY(0); }
+.comic-neue-bold-italic {
+  font-family: "Comic Neue", cursive;
+  font-weight: 700;
+  font-style: italic;
 }
