--- a/app/src/index.css
+++ b/app/src/index.css
@@ -6,6 +6,17 @@
   80%, 100% { transform: translateY(0); }
 }
 
+@keyframes appear {
+  from { opacity: 0; scale:0.1; }
+  to { opacity: 1; scale:1; }
+}
+
+section{
+  animation: appear 2s;
+  animation-timeline: view();
+  animation-range: entry 0% cover 40%;
+}
+
 .bebas-neue-regular {
   font-family: "Bebas Neue", sans-serif;
   font-weight: 400;
